argocd/hit-counter/deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: resume 
spec:
  selector:
    matchLabels:
      app: resume 
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: resume
        image: gcr.io/badamscka/resume:1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  selector:
    app: resume
  ports:
    - protocol: TCP
      port: 80
  type: NodePort 
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: contrasting-org 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: contrasting.org
    http:
      paths:
      - path: /
        backend:
          serviceName: resume
          servicePort: 80
