argocd/hit-counter/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hitcounter.contrasting.org
    http:
      paths:
      - path: /
        backend:
          serviceName: hit-counter
          servicePort: 80
  tls:
  - hosts:
    - hitcounter.contrasting.org
    secretName: contrasting-org
